<resources>
    <string name="app_name">SugarApp</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="sugar">Sugar</string>
    <string name="login">Login:</string>
    <string name="nazwa_uzytkownika">Nazwa uzytkownika</string>
    <string name="podaj_nazwe_uzytkownika">Podaj nazwę użytkownika</string>
    <string name="podaj_haslo">Podaj hasło</string>
    <string name="email">Email</string>
    <string name="podaj_email">Podaj email</string>
    <string name="typ_uzytkownika">Typ użytkownika</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="opiekun">opiekun</string>
    <string name="pacjent">pacjent</string>
    <string name="lekarz">lekarz</string>
    <string name="kliknij_by_sie_zalogowac">Kliknij by się zalogować</string>
    <string name="haslo">Hasło</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="zarejestruj_sie_za_darmo">Nie masz jeszcze konta? Zarejestruj sie za darmo</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="password">password</string>
    <string name="enter_password">Enter password</string>
    <string name="nie_masz_jeszcze_konta_zarejestruj_sie">Nie masz jeszcze konta? Zarejestruj sie</string>
    <string name="login_button">Login</string>
    <string name="user_type">USER TYPE</string>
    <string name="user_name">USER NAME</string>
    <string name="user_email">USER EMAIL</string>
    <string name="kalorie">Kalorie</string>
    <string name="weglowodany">Węglowodany</string>
    <string name="insulina">Insulina</string>
    <string name="data">Data</string>
</resources>
